Fixed contributors bug
Problem with content overlapping on medium and smaller screens.

Fixed by clearing last two columns under the descrition.
Changed letter spacing on large to x-large screens to allow for bigger figures.

--- a/_sass/layout/_contributors.scss
+++ b/_sass/layout/_contributors.scss
@@ -42,6 +42,7 @@
     float: left;
     width: 15%;
     padding-left: 1em;
+    letter-spacing: -.05em;
   }
 }
 
@@ -56,5 +57,6 @@
 
   .contrib-funds {
     width: 10%;
+    letter-spacing: 0; 
   }
 }
